# awesome-delions

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  release-plz.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  3-documentation.yml  4-question.yml  5-ci_cd.yml  6-security.yml  config.yml
.github/workflows/: announce-breaking-change.yml  ci.yml  release-plz.yml  todo-check.yml
.semgrep/: todo-comments.yml
delions/axum-delion/: CHANGELOG.md  Cargo.toml  README.md  dentdelion.toml
delions/axum-delion/src/: extractors.rs  layer.rs  lib.rs  plugin.rs  state.rs
delions/collaborative-filtering-delion/: Cargo.toml  README.md  dentdelion.toml
delions/collaborative-filtering-delion/src/: error.rs  lib.rs  plugin.rs  rating_matrix.rs  recommender.rs  similarity.rs  types.rs
delions/collaborative-filtering-delion/src/recommender/: item_based.rs  user_based.rs
delions/collaborative-filtering-delion/src/similarity/: cosine.rs  jaccard.rs  pearson.rs
delions/collaborative-filtering-delion/tests/: integration_test.rs
delions/content-based-delion/: Cargo.toml  README.md  dentdelion.toml
delions/content-based-delion/src/: error.rs  lib.rs  plugin.rs  profile.rs  recommender.rs  similarity.rs  tfidf.rs  types.rs
delions/content-based-delion/src/profile/: item.rs  user.rs
delions/content-based-delion/src/similarity/: cosine.rs  euclidean.rs
delions/content-based-delion/src/tfidf/: inverse_document_frequency.rs  term_frequency.rs
delions/content-based-delion/tests/: integration_test.rs
delions/matrix-factorization-delion/: Cargo.toml  README.md  dentdelion.toml
delions/matrix-factorization-delion/src/: error.rs  factorizer.rs  lib.rs  model.rs  plugin.rs  rating_matrix.rs  recommender.rs  types.rs
delions/matrix-factorization-delion/src/factorizer/: als.rs  svd.rs
delions/matrix-factorization-delion/tests/: integration_test.rs
delions/popularity-delion/: Cargo.toml  README.md  dentdelion.toml
delions/popularity-delion/src/: decay.rs  error.rs  lib.rs  plugin.rs  recommender.rs  scorer.rs  types.rs
delions/popularity-delion/src/scorer/: rating_count.rs  trending.rs  view_count.rs
delions/popularity-delion/tests/: integration_test.rs
instructions/: ANTI_PATTERNS.md  COMMIT_GUIDELINE.md  DELION_PATTERNS.md  DOCUMENTATION_STANDARDS.md  GITHUB_INTERACTION.md  ISSUE_GUIDELINES.md  ISSUE_HANDLING.md  MODULE_SYSTEM.md  PR_GUIDELINE.md  TESTING_STANDARDS.md  UPSTREAM_ISSUE_REPORTING.md
template/: cargo-generate.toml
template/{{project-name}}/: Cargo.toml  README.md  dentdelion.toml
template/{{project-name}}/src/: lib.rs
