[workspace]
members = ["delions/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent8192/awesome-delions"
authors = ["kent8192 <51869472+kent8192@users.noreply.github.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
